--- a/readmeboost-ui/package.json
+++ b/readmeboost-ui/package.json
@@ -4,13 +4,14 @@
   "private": true,
   "dependencies": {
     "cra-template-pwa": "2.0.0",
+    "file-saver": "^2.0.5",
+    "lucide-react": "^0.263.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
     "react-markdown": "^9.0.1",
+    "react-scripts": "5.0.1",
     "react-syntax-highlighter": "^15.5.0",
-    "file-saver": "^2.0.5",
-    "lucide-react": "^0.263.1"
+    "web-vitals": "^5.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -37,8 +38,8 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.3.0",
     "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.24"
+    "postcss": "^8.4.24",
+    "tailwindcss": "^3.3.0"
   }
 }
